--- a/directive/watch.html
+++ b/directive/watch.html
@@ -52,7 +52,7 @@
         [dagger-demo] *watch directive (lazy decorator)</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
         on <a href="https://codepen.io">CodePen</a>.
       </iframe>
-      <div>In the above example, we used a script module that has not been mentioned yet, so we will come back to this example after understanding the script module usage.</div>
+      <div>In the above example, we used a <a href="module/script">script module</a> that has not been mentioned yet, so we will come back to this example after understanding the script module usage.</div>
     </div>
   </template>
 </div>
