Directive / Meta-Directive

--- a/directive/dynamic.html
+++ b/directive/dynamic.html
@@ -1,6 +1,6 @@
-<h2>${ $['directive.dynamic'] }</h2>
 <div class="content">
   <template *exist="language === 'zhCN'">
+    <h2>指令 / @directive</h2>
     <h3 class="question">@directive指令的作用</h3>
     <div class="answer">在某些情况下，您可能需要根据不同条件来动态构造指令或指令修饰符的内容，此时您可以使用“@directive”指令。</div>
     <h3 class="question">@directive的执行结果</h3>
