--- a/directive/meta.html
+++ b/directive/meta.html
@@ -1,15 +1,16 @@
-<h2>${ $['directive.meta'] }</h2>
 <div class="content">
   <template *exist="language === 'zhCN'">
+    <h2>指令 / 元指令</h2>
     <h3 class="question">什么是元指令</h3>
-    <div class="answer">元指令是dagger.js在宿主元素的模板解析阶段触发执行的一组指令的统称，用于为dagger.js解析宿主元素提供“元数据”。</div>
-    <h3 class="question">元指令有哪些</h3>
+    <div class="answer">元指令是在宿主元素的模板解析阶段触发执行的一组指令的统称。</div>
+    <h3 class="question">元指令实例列表</h3>
     <div class="answer"><a class="margin" href="directive/raw">@raw</a><a class="margin" href="directive/dynamic">@directive</a></div>
   </template>
   <template *exist="language === 'enUS'">
-    <template *each="$['directive.controller.sections']">
-      <h3 class="question">${ item.question }</h3>
-      <div class="answer" *html="item.answer"></div>
-    </template>
+    <h2>Directive / Meta-Directive</h2>
+    <h3 class="question">What is a Meta-Directive?</h3>
+    <div class="answer">A meta-directive is a group of directives that are triggered during the template parsing stage of the host element.</div>
+    <h3 class="question">List of Meta-Directive</h3>
+    <div class="answer"><a class="margin" href="directive/raw">@raw</a><a class="margin" href="directive/dynamic">@directive</a></div>
   </template>
 </div>
