--- a/directive/raw.html
+++ b/directive/raw.html
@@ -1,6 +1,6 @@
-<h2>${ $['directive.raw'] }</h2>
 <div class="content">
   <template *exist="language === 'zhCN'">
+    <h2>指令 / @raw</h2>
     <h3 class="question">@raw指令的作用</h3>
     <div class="answer">
       <div>dagger.js将“@raw”指令的宿主元素及其子级元素作为平凡元素处理（无论宿主元素上是否存在其他指令声明），不再进行进一步的解析或执行其他指令。</div>
