--- a/module/introduction.html
+++ b/module/introduction.html
@@ -7,13 +7,13 @@
       <div>模块内容是只读的，不允许在运行时进行修改。</div>
     </div>
     <h3 class="question">模块类型列表</h3>
-    <div class="answer"><a class="margin" href="module/template">模板</a><a class="margin" href="module/script">脚本</a><a class="margin" href="module/style">样式</a><a class="margin" href="module/json">json</a><a class="margin" href="module/string">字符串</a><a class="margin" href="module/namespace">名空间</a></div>
+    <div class="answer"><a class="margin" href="module/view">模板</a><a class="margin" href="module/script">脚本</a><a class="margin" href="module/style">样式</a><a class="margin" href="module/json">json</a><a class="margin" href="module/string">字符串</a><a class="margin" href="module/namespace">名空间</a></div>
     <h3 class="question">模块的加载时机</h3>
     <div class="answer">dagger.js内部维护了一个运行时模块管理器，当应用程序首次加载或者页面内路由发生切换时将触发注册模块的动态加载、解析和执行。已经加载过的模块会在运行时缓存。我们将在<a href="router/introduction">路由</a>章节对模块配置项与路由配置项的对应关系进行讲解。</div>
     <h3 class="question">如何注册模块</h3>
     <div class="answer">
       <div>在<a href="overview/installation">安装</a>章节中我们曾经提到，项目的入口页面要添加一个类型为“dagger/modules”的script标签作为应用程序配置项。在使用模块前，您需要先在配置项中对其进行注册。一个典型的模块注册项（内容为json格式）包括如下信息：
-        <div class="margin">1. 模块名。由注册项的键指定。合法的模块名称（除去<a href="module/template">模板</a>模块之外）由“$”，“-”，“_”，大小写字母和数字组成，首字符不能是数字。</div>
+        <div class="margin">1. 模块名。由注册项的键指定。合法的模块名称（除去<a href="module/view">模板</a>模块之外）由“$”，“-”，“_”，大小写字母和数字组成，首字符不能是数字。</div>
         <div class="margin">2. 模块的资源加载位置。由注册项值的“uri”字段指定。其内容可以是url地址（远程资源），DOM选择器（本地资源），也可以是另一个模块的路径（引用资源）。</div>
         <div class="margin">3. 模块的类型。由注册项值的“type”字段指定。</div>
       </div>
@@ -31,7 +31,7 @@
       </div>
     </div>
     <h3 class="question">如何使用模块</h3>
-    <div class="answer">您可以在指令表达式中通过回调参数对象“$module”访问模块内容（<a href="module/template">模板</a>和<a href="module/style">样式</a>模块除外）。与<a href="directive/scope">作用域</a>类似，您也可以通过匿名方式访问$module下的字段：
+    <div class="answer">您可以在指令表达式中通过回调参数对象“$module”访问模块内容（<a href="module/view">模板</a>和<a href="module/style">样式</a>模块除外）。与<a href="directive/scope">作用域</a>类似，您也可以通过匿名方式访问$module下的字段：
       <div class="code">
         +click="$module.func($scope.value)" // 具名方式访问模块和作用域对象
         <br>
@@ -76,7 +76,7 @@
           </tr>
           <tr>
             <td>url地址后缀为“.html”且资源文件内容不包含&lt;html&gt;标签</td>
-            <td rowspan="2"><a href="module/template">模板模块</a></td>
+            <td rowspan="2"><a href="module/view">模板模块</a></td>
             <td rowspan="2"><a target="_blank" href="https://codepen.io/dagger8224/pen/OJQQdgv.html">./template.html</a></td>
           </tr>
           <tr>
@@ -116,7 +116,7 @@
           </tr>
           <tr>
             <td>资源容器是&lt;template&gt;标签</td>
-            <td><a href="module/template">模板模块</a></td>
+            <td><a href="module/view">模板模块</a></td>
             <td><a target="_blank" href="https://codepen.io/dagger8224/pen/eYVVXdB?editors=1000">template</a></td>
           </tr>
           <tr>
@@ -142,7 +142,7 @@
           </tr>
           <tr>
             <td>被引用模块为模板模块</td>
-            <td><a href="module/template">模板模块</a></td>
+            <td><a href="module/view">模板模块</a></td>
             <td><a target="_blank" href="https://codepen.io/dagger8224/pen/gOvvNLq?editors=1000">template</a></td>
           </tr>
           <tr>
