--- a/module/string.html
+++ b/module/string.html
@@ -12,7 +12,7 @@
           [dagger-demo] string module</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
           on <a href="https://codepen.io">CodePen</a>.
         </iframe>
-        <div>上例中，我们通过显示指定模块“string3”的类型为“string”避免自动类型推断规则（将“string3”推断为<a href="module/template">模板模块</a>）生效。</div>
+        <div>上例中，我们通过显示指定模块“string3”的类型为“string”避免自动类型推断规则（将“string3”推断为<a href="module/view">模板模块</a>）生效。</div>
         <div>任何未指定类型且不匹配<a href="module/introduction">自动推断规则</a>的模块（如上例中的“string2”模块）也将被框架当做字符串模块进行解析。</div>
       </div>
     </div>
