--- a/directive/meta.html
+++ b/directive/meta.html
@@ -8,8 +8,8 @@
   </template>
   <template *exist="language === 'enUS'">
     <h2>Directive / Meta-Directive</h2>
-    <h3 class="question">What is a Meta-Directive?</h3>
-    <div class="answer">A meta-directive is a group of directives that are triggered during the template parsing stage of the host element.</div>
+    <h3 class="question">What are Meta-Directives?</h3>
+    <div class="answer">meta-directives are a group of directives that are triggered during the template parsing stage of the host element.</div>
     <h3 class="question">List of Meta-Directive</h3>
     <div class="answer"><a class="margin" href="directive/raw">@raw</a><a class="margin" href="directive/dynamic">@directive</a></div>
   </template>
