--- a/directive/controller.html
+++ b/directive/controller.html
@@ -25,9 +25,9 @@
   </template>
   <template *exist="language === 'enUS'">
     <h2>Directive / Control Directive</h2>
-    <h3 class="question">What is a Control Directive?</h3>
+    <h3 class="question">What are Control Directives?</h3>
     <div class="answer">
-      <div>A control directive is a group of directives that are triggered when the data in the scope changes.</div>
+      <div>Control directives are a group of directives that are triggered when the data in the scope changes.</div>
       <div>You can understand control directives as <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/HTML/Attributes">element attributes</a> with dynamic response capabilities.</div>
     </div>
     <h3 class="question">List of Control Directives</h3>
